--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tetchisketch Recipes</title>
-</head>
-<body>
-    <h1>Tetchisketch Recipes</h1>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <h1>Wow! Tetchisketch Recipes</h1>
     <p><em>Here are a few of my go-to recipes for quick and delicious morsels:</em></p>
     <ul>
-        <li><a href="./pages/pbj.html" target="_self" rel="noopener noreferrer">PB&J</a></li>
-        <li><a href="./pages/pantry-pasta.html" target="_self" rel="noopener noreferrer">Pantry Pasta</a></li>
-        <li><a href="./pages/quick-sesame-noodle.html" target="_self" rel="noopener noreferrer">Quick Sesame Noodles</a></li>
+      <li class="recipe-link"><a href="./pages/pbj.html" target="_self" rel="noopener noreferrer">PB&J</a></li>
+      <li class="recipe-link"><a href="./pages/pantry-pasta.html" target="_self" rel="noopener noreferrer">Pantry Pasta</a></li>
+      <li class="recipe-link"><a href="./pages/quick-sesame-noodle.html" target="_self" rel="noopener noreferrer">Quick Sesame Noodles</a></li>
     </ul>
-</body>
+  </body>
 </html>
