--- a/pages/pantry-pasta.html
+++ b/pages/pantry-pasta.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pantry Pasta</title>
-</head>
-<body>
+    <link rel="stylesheet" href="../style.css">
+  </head>
+  <body>
     <h1>Pantry Pasta</h1>
     <img src="../img/pantry-pasta.jpg" alt="some tasty pantry pasta!" width="1024" height="1536">
     <p><em>This easy-to-make dish is made from kitchen staples and will likely become one of your favorites too! </em></p>
@@ -41,7 +42,7 @@
         <li>Add the Parmesean cheese and 1/4 cup of the pasta water. Stir to Combine</li>
         <li>When the pasta is cooked al dente, strain and add to the sauce, tossing to coat.</li>
         <li>Add the butter and lemon juice and toss to combine. Once the Butter is melted and combined, take the pan off the heat.</li>
-        <li>Add the lemon zest, tomatoes, onions (if using), and any additional Parmesean cheese to taste.</li>
+        <li>Add the lemon zest, tomatoes, onions (if using), and any additional cheese to taste.</li>
         <li>Toss to combine, serve, and enjoy!</li>
         
     </ol>
@@ -52,5 +53,5 @@
         <li>If the sauce is done before the pasta, take the pan off the heat until the pasta is ready.</li>
         
     </ul>
-</body>
+  </body>
 </html>
