--- a/pages/pbj.html
+++ b/pages/pbj.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peanut Butter & Jelly</title>
-</head>
-<body>
+    <link rel="stylesheet" href="../style.css">
+  </head>
+  <body>
     <h1>PB&J (a.k.a. Peanut Butter and Jelly Sandwich)</h1>
-    <img src="../img/pbj.jpg" alt="A peanut butter and jelly sandwich" width="1000" height="1000">
+    <a>
+      <img src="../img/pbj.jpg" alt="A peanut butter and jelly sandwich" width="1000" height="1000">
+    </a>
+
     <p><em>How tasty! What nostalgia! This classic sandwich can be made in a flash!</em></p>
     <h4><strong>Base Ingredients:</strong></h4>
     <ul>
@@ -41,5 +45,5 @@
         <li>If you plan on enjoying the sandwich later, you may find that the jam/jelly will cause the bread to become soggy. To avoid finding yourself in such a situation, you may put a thin layer of peanut butter on the slice of bread designated for Jelly, before applying the Jelly.</li>
         
     </ul>
-</body>
+  </body>
 </html>
