--- a/pages/quick-sesame-noodle.html
+++ b/pages/quick-sesame-noodle.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quick Sesame Noodle</title>
-</head>
-<body>
+    <link rel="stylesheet" href="../style.css">
+  </head>
+  <body>
     <h1>Quick Sesame Noodle</h1>
     <img src="../img/sesame-noodle.jpg" alt="some tasty sesame noodles!" width="600" height="900">
     <p><em></em></p>
@@ -48,5 +49,5 @@
         <li>If you prefer cold noodles on a hot summer day, run cold water over them after cooking and before combining with other ingreadients.</li>
         
     </ul>
-</body>
+  </body>
 </html>
