Feat: home button and centered img

--- a/pages/pantry-pasta.html
+++ b/pages/pantry-pasta.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../style.css">
   </head>
   <body>
+    <a href="../index.html">Home</a>
+    <p></p>
     <h1>Pantry Pasta</h1>
     <img src="../img/pantry-pasta.jpg" alt="some tasty pantry pasta!" width="1024" height="1536">
     <p><em>This easy-to-make dish is made from kitchen staples and will likely become one of your favorites too! </em></p>
