--- a/pages/pbj.html
+++ b/pages/pbj.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../style.css">
   </head>
   <body>
+    <a href="../index.html">Home</a>
+    <p></p>
     <h1>PB&J (a.k.a. Peanut Butter and Jelly Sandwich)</h1>
     <a>
       <img src="../img/pbj.jpg" alt="A peanut butter and jelly sandwich" width="1000" height="1000">
