--- a/pages/quick-sesame-noodle.html
+++ b/pages/quick-sesame-noodle.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="../style.css">
   </head>
   <body>
+    <a href="../index.html">Home</a>
+    <p></p>
     <h1>Quick Sesame Noodle</h1>
-    <img src="../img/sesame-noodle.jpg" alt="some tasty sesame noodles!" width="600" height="900">
+    <img src="../img/sesame-noodle.jpg" alt="some tasty sesame noodles!" width="600" height="900">    
     <p><em></em></p>
     
     <h4><strong>Base Ingredients:</strong></h4>
